# airtable-mcp-server

./: .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
src/airtable_mcp/: __init__.py  client.py  server.py
